# proxmox-yew-comp

./: Cargo.toml  Makefile  TODO.md  js-helper-module.js
debian/: changelog  control  debcargo.toml
src/: acl_context.rs  api_load_callback.rs  apt_api_types.rs  apt_package_manager.rs  apt_repositories.rs  auth_edit_ldap.rs  auth_edit_openid.rs  auth_openid_window.rs  auth_view.rs  authid_selector.rs  bandwidth_selector.rs  bond_mode_selector.rs  bond_xmit_hash_policy_selector.rs  calendar_event_selector.rs  common_api_types.rs  config_panel.rs  confirm_button.rs  data_view_window.rs  edit_dialog.rs  edit_window.rs  editable_property.rs  gauge.rs  help_button.rs  http.rs  http_client_wasm.rs  http_helpers.rs  http_stream.rs  journal_view.rs  key_value_grid.rs  key_value_list.rs  language_dialog.rs  language_selector.rs  lib.rs  loadable_component.rs  log_view.rs  login_panel.rs  markdown.rs  markdown_editor.rs  meter_label.rs  node_info.rs  (+43 more)
src/acl/: acl_edit.rs  acl_path_selector.rs  acl_view.rs  mod.rs
src/acme/: acme_account_selector.rs  acme_accounts.rs  acme_challenge_selector.rs  acme_challenge_type_selector.rs  acme_dirtectory_selector.rs  acme_domains.rs  acme_plugin_selector.rs  acme_plugins.rs  acme_register_account.rs  certificate_list.rs  mod.rs
src/configuration/: dns.rs  mod.rs  network_edit.rs  network_view.rs  time.rs
src/configuration/pve/: firewall_options_cluster_panel.rs  firewall_options_guest_panel.rs  firewall_options_node_panel.rs  guest.rs  lxc_dns_panel.rs  lxc_network_panel.rs  lxc_options_panel.rs  mod.rs  move_disk_dialog.rs  qemu_options_panel.rs  resize_disk_dialog.rs
src/configuration/pve/firewall/: firewall_options_cluster_panel.rs  firewall_rules_panel.rs  mod.rs
src/configuration/pve/lxc_options_panel/: mod.rs
src/configuration/pve/lxc_resources_panel/: desktop.rs  mobile.rs  mod.rs  reassign_volume_dialog.rs
src/configuration/pve/qemu_hardware_panel/: desktop.rs  mobile.rs  mod.rs  move_disk_dialog.rs  reassign_disk_dialog.rs  resize_disk_dialog.rs
src/firewall/: context.rs  log_ratelimit_field.rs  mod.rs  options_edit.rs  rate_field.rs  rules.rs
src/form/: mod.rs
src/form/pve/: boot_device_list.rs  hotplug_feature_selector.rs  lxc_mount_options_selector.rs  mod.rs  pve_guest_selector.rs  pve_network_selector.rs  pve_storage_content_selector.rs  pve_storage_selector.rs  pve_vlan_field.rs  qemu_cache_type_selector.rs  qemu_controller_selector.rs  qemu_cpu_flags_list.rs  qemu_cpu_model_selector.rs  qemu_disk_format_selector.rs  qemu_disk_size_format_selector.rs  qemu_display_type_selector.rs  qemu_machine_version_selector.rs  qemu_ostype_selector.rs
src/form/pve/firewall_property/: log_level_selector.rs  log_ratelimit_property.rs  log_ratelimit_selector.rs  mod.rs
src/form/pve/lxc_property/: lxc_cores_property.rs  lxc_features_property.rs  lxc_memory_swap_property.rs  lxc_mount_point_property.rs  lxc_nameserver_property.rs  lxc_network_property.rs  mod.rs
src/form/pve/qemu_property/: mod.rs  qemu_agent_property.rs  qemu_amd_sev_property.rs  qemu_bios_property.rs  qemu_disk_property.rs  qemu_display_property.rs  qemu_efidisk_property.rs  qemu_intel_tdx_property.rs  qemu_machine_property.rs  qemu_memory_property.rs  qemu_network_property.rs  qemu_processor_property.rs  qemu_scsihw_property.rs  qemu_smbios1_property.rs  qemu_spice_enhancement_property.rs  qemu_tpmstate_property.rs
src/layout/: card.rs  list_tile.rs  mobile_form.rs  mod.rs
src/pending_property_view/: mod.rs  pending_property_grid.rs  pending_property_list.rs
src/property_view/: mod.rs  property_grid.rs  property_list.rs
src/rrd/: graph.rs  graph_space.rs  grid.rs  mod.rs  rrd_value_renderer.rs  series.rs  units.rs
src/tfa/: mod.rs  tfa_add_recovery.rs  tfa_add_totp.rs  tfa_add_webauthn.rs  tfa_confirm_remove.rs  tfa_dialog.rs  tfa_edit.rs  tfa_view.rs  webauthn.rs
src/utils/: clipboard.rs  mod.rs  task_descriptions.rs
