[package]
name = "proxmox-yew-comp"
version = "0.7.1"
authors = ["Dietmar Maurer <dietmar@proxmox.com>"]
license = "AGPLv3"
edition = "2021"

exclude = ["debian"]

[dependencies]
anyhow = "1.0"
derivative = "2.2.0"
futures = "0.3"
http = "1"
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
web-sys = { version = "0.3", features = [
  "AbortController",
  "AbortSignal",
  "Attr",
  "Clipboard",
  "Crypto",
  "Document",
  "DomParser",
  "DomRect",
  "Element",
  "HtmlDocument",
  "HtmlElement",
  "NamedNodeMap",
  "Navigator",
  "Node",
  "Range",
  "ReadableStreamDefaultReader",
  "RequestInit",
  "Selection",
  "SupportedType",
  "SvgGraphicsElement",
  "SvgRect",
  "SvgsvgElement",
  "Url",
] }
js-sys = "0.3"
log = "0.4.6"
indexmap = { version = ">= 1.9", features = ["std"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-logger = "0.2"
gloo-events = "0.2"
gloo-utils = "0.2"
gloo-timers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
url = "2.1"
percent-encoding = "2.1"
html-escape = "0.2"
pulldown-cmark = { version = "0.11", features = [] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
slab = "0.4"
regex = "1.7"

#pwt = { path = "../proxmox-yew-widget-toolkit" }
#pwt-macros = { path = "../proxmox-yew-widget-toolkit/pwt-macros" }
pwt = "0.7.6"
pwt-macros = "0.5"

proxmox-base64 = "1"
proxmox-schema = { version = "5", features = ["api-macro"] }
proxmox-human-byte = "1"
proxmox-rrd-api-types = { version = "1", optional = true }
proxmox-serde = "1"

proxmox-time = "2"

proxmox-login = "1"
proxmox-client = "1"
proxmox-tfa = { version = "6", default-features = false, features = [
  "api-types",
] }
proxmox-auth-api = { version = "1", default-features = false, features = [
  "api-types",
] }
proxmox-apt-api-types = { version = "2.0", optional = true }
proxmox-access-control = "1.1"
proxmox-dns-api = { version = "1", optional = true }
proxmox-network-api = { version = "1", optional = true }
proxmox-node-status = { version = "1", features = [] }

pve-api-types = "8.1"
pbs-api-types = "1"

[features]
default = []
apt = [
    "dep:proxmox-apt-api-types"
]
dns = [
    "dep:proxmox-dns-api"
]
network = [
    "dep:proxmox-network-api"
]
rrd = [
    "dep:proxmox-rrd-api-types"
]
